695 - fix tests